<resources>
    <string name="app_name">MovieApp</string>
    <string name="movies">Movies</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="username_email">UserName/email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="teaser_info">Get the latest movies, Kid\'s shows, romance and drama</string>
</resources>